# bi_datawarehouse

./: README.md
.github/workflows/: lambda-layer.yml
terraform/itc-beta/: README.md  main.tf  variables.tf
terraform_modules/demand_pipeline/: README.md  demand_pipeline_lambda.tf  outputs.tf  variables.tf
terraform_modules/demand_pipeline/lambdas/demand_pipeline/: README.md  main.py  pyproject.toml  utils.py
terraform_modules/demand_pipeline/lambdas/demand_pipeline/builders/: audit_builder.py  case_builder.py  metadata_builder.py  templates_builder.py
terraform_modules/demand_pipeline/lambdas/demand_pipeline/tests/: test_main.py
terraform_modules/demand_pipeline_schedule/: README.md  demand_pipeline_schedule.tf  outputs.tf  variables.tf
terraform_modules/itc_data_warehouse/: README.md  itc_rds.tf  outputs.tf  variables.tf
terraform_modules/itc_data_warehouse/sql_scripts/: 01_create_schemas.sql  02_create_verifyplus_table.sql  03_create_raw_cases_table.sql  04_create_raw_metadata_table.sql  05_create_raw_templates_table.sql  06_create_raw_audits_table.sql  07_create_demands_archived_view.sql  08_create_demands_uploaded_view.sql  09_create_verifyplus_view.sql  10_create_demands_summary_view.sql  11_create_roles.sql  13_grant_usage.sql  14_refresh_materialized_views.sql  combine_sql_files.py  combined.sql
terraform_modules/itc_vpc/: README.md  itc_vpc.tf  outputs.tf  variables.tf
terraform_modules/orchestrator/: README.md  orchestrator.tf  variables.tf
terraform_modules/orchestrator/lambdas/orchestrator/: README.md  main.py  pyproject.toml
terraform_modules/verifyplus_pipeline/: README.md  outputs.tf  variables.tf  verifyplus_pipeline_lambda.tf
terraform_modules/verifyplus_pipeline/lambdas/verifyplus_pipeline/: README.md  api_handler.py  database_handler.py  main.py  pyproject.toml  utils.py
terraform_modules/verifyplus_pipeline/lambdas/verifyplus_pipeline/tests/: test_database_handler.py  test_main.py
terraform_modules/verifyplus_pipeline_schedule/: README.md  variables.tf  verifyplus_pipeline_schedule.tf
(+3 files in other folders)
